# MTCNN_SHELL

./: .project  CMakeLists.txt  main.cpp  mtcnn_shell.kdev4  prefix.hpp
src/: CMakeLists.txt  detector.cpp  detector.hpp
